# rag-system

./: README.md  output.md  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.yml
.streamlit/: config.toml
app/: config.py  constant.py  index_knowledge.py  main.py
app/benchmark/: index_context.py
app/llm/: get_llm.py
app/model/: doc_chunk_json.py  document_json.py  document_model.py  embeddings_model.py  message_for_llm.py
app/new_services/: wikipedia_loader.py
app/old_service/: bm25.py
app/repo/: contextual_vector_db.py  document_json_db.py  elastic_cloud.py  pkl_file.py  weaviate_cloud.py
app/service/: bm25.py  contextual_embedding.py  hybrid_rag.py  knowledge_index_service.py  rerank.py
app/services/: chunk_contextualizer.py  context_provider.py  document_splitter.py  embedding_creator.py  hybrid_search.py  index.py  wikipedia_loader.py
app/tools/: hybrid_search.py
app/utils/: dual_output.py  md5hash.py  x_client.py  x_types.py
benchmark/: .py  control_subject.py  data_index.py  multi_step_rag.py  results.json  results_gpt_gpt_50_3.json  results_gpt_no_context.json
benchmark/gpt/: repo_check.py  results_evaluate.py  results_gpt_gpt_30_1.json
benchmark/llama3_3/: generate_contextual_embedding.py  llama3_3_contextual_multistep_rag.py  llama3_3_multistep_rag.py  llama3_3_no_context.py  llama3_3_simple_rag.py  results_llama3_3_contextual_multistep_rag.json  results_llama3_3_multistep_rag.json  results_llama3_3_no_context.json  results_llama3_3_simple_rag_50_3.json
benchmark/local_nemotron/: data_index.py  multi_step_rag.py  results_ne_ne_50_3.json
benchmark/nemotron/: control_subject.py  multi_step_rag_run.py  results_gpt_nemotron_50_3.json  results_nemotron_no_context.json  results_nemotron_no_context_frequency_penalty_1.json
benchmark/normal_embed/: multi_step_rag_gpt_4o_mini.py  results_gpt_normal_embed.json
benchmark/normal_rag/: data_index.py  multi_step_rag.py  results_nemotron_normal_embed.json
data/my_contextual_db_1/: contextual_vector_db.pkl
evaluation/: README.md  calculate_loss.py  fast_api.py  optimize.py  request_model.py
experiment/: main.py
scripts/: contextual_embeddings.ipynb  retrieval_augmented_generation.ipynb  wikilink_to_chunks.ipynb
ui/: app_run.py  main.py  streamlit_app.py
ui/tmp/: tmp.json
(+947 files in other folders)
