[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["hokei"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
agentjo = "^0.0.1"
pydantic-settings = "^2.6.0"
weaviate-client = "^4.9.0"
langchain-community = "^0.3.3"
wikipedia = "^1.4.0"
anthropic = "^0.37.1"
elasticsearch = "^8.15.1"
voyageai = "^0.2.4"
matplotlib = "^3.9.2"
cohere = "^5.11.2"
datasets = "^3.1.0"
langchain-openai = "^0.2.5"
markdownify = "^0.13.1"
mwparserfromhell = "^0.6.6"
pypdf = "^5.1.0"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"